--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,108 @@
 body{
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 1em 5em;
+    background-color: var(--neutral-color3);
+}
+
+header{
+    width: 50%;
+    margin:0 auto;
+}
+
+h1.light{
+    font-weight: 200;
+}
+
+p{
+    font-weight: 200;
+}
+
+.grid{
+    display: grid;
+}
+
+.cards{
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
+    margin-top: 2em;
+    gap: 1.25em;
+}
+
+.card{
+    text-align: left;
+    background-color: #fff;
+    padding: 2em;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-shadow: 0px 0px 7px var(--neutral-color1),0px 0px 15px var(--neutral-color1);
+    position: relative;
+    transition:all 1s 4s;
+}
+
+.card:hover{
+    top: -0.5em;
+}
+
+
+a:hover{
+    color: green;
+}
+.card img{
+    align-self: flex-end;
+    margin-top: 3em;
+}
+
+.card:nth-child(1){
+    border-top: 5px solid var(--primary-color2);
+    grid-row: 2/4;
+}
+
+.card:nth-child(2){
+    border-top: 5px solid var(--primary-color1);
+    grid-row: 1/3;
+}
+
+.card:nth-child(3){
+    border-top: 5px solid var(--primary-color4);
+    grid-row: 2/4;
+}
+
+.card:nth-child(4){
+    border-top: 5px solid var(--primary-color3);
+    grid-row: 3/5;
+}
+
+@media screen and (max-width:600px) {
+    .cards{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .card{
+        grid-row: unset !important;
+    }
+
+    .card:nth-child(1){
+        order: 1;
+    }
+
+    .card:nth-child(2){
+        order: 2;
+    }
+
+    .card:nth-child(3){
+        order: 4;
+    }
+
+    .card:nth-child(4){
+        order: 3;
+    }
+
+    header{
+        width: 100%;
+    }
 }
