--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ header{
     margin:0 auto;
 }
 
+h1{
+    font-weight: 600;   
+}
+
 h1.light{
     font-weight: 200;
 }
@@ -56,8 +60,9 @@ p{
     flex-direction: column;
     align-items: flex-start;
     box-shadow: 0px 0px 7px var(--neutral-color1),0px 0px 15px var(--neutral-color1);
+    top:0;
     position: relative;
-    transition:all 1s 4s;
+    transition:all 1s;
 }
 
 .card:hover{
